# xlibmruby

./: .gitignore  CMakeLists.txt  build.sh  combine.rb  combined_output.txt  project_summary.txt
.service_data/: db.json  dir_summaries.json  final_summary.json
scripts/: hello.rb
src/: main.cpp
src/core/: container.cpp  container.hpp
src/gui/: buffered_component.cpp  buffered_component.hpp  label.cpp  label.hpp  visible_component.hpp
src/interfaces/: iruby_service.hpp  iselection_service.hpp  iwindow_service.hpp
src/modules/: app_module.cpp  app_module.hpp
src/services/: ruby_service.cpp  ruby_service.hpp  selection_service.cpp  selection_service.hpp  window_service.cpp  window_service.hpp
src/utils/: x11_raii.hpp
